--- a/form-styles.css
+++ b/form-styles.css
@@ -1,16 +1,16 @@
 
-label{
+.toplevel_page_ptn-automated-migration label{
 	float: left;
 	width: 220px;
 	font-weight: bold;
 	}
 
-input, textarea{
+.toplevel_page_ptn-automated-migration input, .toplevel_page_ptn-automated-migration textarea{
 	width: 180px;
 	margin-bottom: 20px;
 	}
 
-textarea{
+.toplevel_page_ptn-automated-migration textarea{
 	width: 250px;
 	height: 150px;
 	}
@@ -27,4 +27,21 @@ width: 100px;
 
 br{
 clear: left;
+}
+
+#wrapper {
+	width:100%;
+	clear:both;
+	overflow: hidden;
+	position: relative;
+	width: 100%;
+}
+
+.logo-left {
+	max-width: 50%;
+	float: left;
+}
+.logo-right {
+	max-width: 50%;
+	float: right;
 }
